--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^2.0.7
   dots_indicator: ^3.0.0
+  buttons_tabbar: ^1.3.7+1
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
