--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,15 +19,16 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^2.0.7
   dots_indicator: ^3.0.0
-  buttons_tabbar: ^1.3.7+1
+  buttons_tabbar: ^1.3.8
   readmore: ^2.2.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.0
 
 flutter:
 
