--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   buttons_tabbar: ^1.3.8
   readmore: ^2.2.0
   percent_indicator: ^4.2.3
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
