--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,15 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   provider: ^6.0.5
-  flutter_svg: ^2.0.8
+  flutter_svg: ^2.0.9
   dots_indicator: ^3.0.0
   buttons_tabbar: ^1.3.8
   readmore: ^2.2.0
   percent_indicator: ^4.2.3
   loading_animation_widget: ^1.2.0+4
-  syncfusion_flutter_charts: ^23.1.42
+  syncfusion_flutter_charts: ^23.1.43
   badges: ^3.1.2
+  intl: ^0.18.1
   dropdown_button2: ^2.3.9
   file_picker: ^6.0.0
 
